# evorule-tcb

./: .editorconfig  .gitattributes  .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CLA-individual.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  COPYRIGHT_ASSIGNMENT_POLICY.md  Cargo.toml  DUAL_LICENSE.md  EvoRule Constitutional Dispatch Architecture.md  FREE_COMMERCIAL_LICENSE.md  LICENSE  LICENSE_CHANGE_NOTICE.md  MIGRATION_GUIDE.md  NOTICE  README.md  RELEASE.md  SECURITY.md  STARTUP.md  TRADEMARK.md  rustfmt.toml
.github/workflows/: ci.yml  paradigm-gate.yml
crates/tcb/: Cargo.toml
crates/tcb/benches/: primitives.rs
crates/tcb/examples/: state_pipeline.rs
crates/tcb/src/: audit.rs  deterministic.rs  domain.rs  error.rs  exec_context.rs  exec_ctl_ctx.rs  lib.rs  rule.rs  state.rs  value.rs
crates/tcb/src/control/: dispatch.rs  mod.rs  while_loop.rs
crates/tcb/src/instruction/: mod.rs  registry.rs
crates/tcb/src/primitive/: audit_ops.rs  compute_ops.rs  domain_ops.rs  error_ops.rs  mod.rs  noop_ops.rs  queue_ops.rs  rule_ops.rs  state_ops.rs
crates/tcb/tests/: v10_json_roundtrip.rs  v11_state_roundtrip.rs  v12_set_ops_commutative.rs  v13_hash_collision.rs  v1_pure_function.rs  v4_determinism.rs  v6_iter_order.rs  v7_termination.rs  v8_recursion_bound.rs  v9_audit_chain.rs
docs/: LLM_CONTEXT.md
docs/developer-guide/design-decisions/: 01-while-loop-self-driving.md  02-TheEquation, core_eval.json, and while_loop.md  03-mechanism-vs-policy.md  mechanism-exemption.json
docs/gate/: FORBIDDEN_OVERVIEW.md  GATES.md
docs/spec/en-US/: EvoRule_Determinism_Standard.md  EvoRule_programming_Spec.md  TCB_Governance_Contract.md
tools/: install-hooks.sh  paradigm-gate.sh
